# advent-of-code

./: CMakeLists.txt
01/part1/: code.C
01/part2/: code.C
include/: common.h
src/day01/part1/: code.C  main.cxx
src/day01/part2/: code.C  main.cxx
src/day02/part1/: main.cxx
src/day02/part2/: main.cxx
